--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,11 @@
         "activeTab",
         "storage",
         "scripting",
-        "contextMenus"
+        "contextMenus",
+        "tabs"
+    ],
+    "host_permissions": [
+        "<all_urls>"
     ],
     "action": {
         "default_popup": "popup.html",
