--- a/manifest.json
+++ b/manifest.json
@@ -25,6 +25,9 @@
             ],
             "js": [
                 "js/content.js"
+            ],
+            "css": [
+                "css/content.css"
             ]
         }
     ],
