feat:devide background to module

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,8 @@
         "default_icon": "icons/icon.png"
     },
     "background": {
-        "service_worker": "js/background.js"
+        "service_worker": "js/background.js",
+        "type": "module"
     },
     "content_scripts": [
         {
