devide popup ui

--- a/manifest.json
+++ b/manifest.json
@@ -24,6 +24,7 @@
                 "<all_urls>"
             ],
             "js": [
+                "js/floatingUI.js",
                 "js/content.js"
             ],
             "css": [
